Allow to attach to current VM